# dropsite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROTOCOL.md
dropsite/: __init__.py  cli.py  dropsite.py
examples/basic-two-agents/: demo.py
examples/human-in-the-loop/: demo.py
examples/multi-agent-pipeline/: llm_agent.py
src/: __init__.py  dropsite.py
tests/: test_dropsite.py
