[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropsite"
version = "0.1.0"
description = "The dead drop for your AI agents. Filesystem-based agent communication."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agents", "multi-agent", "communication", "filesystem", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/possibly6/dropsite"
Repository = "https://github.com/possibly6/dropsite"
Issues = "https://github.com/possibly6/dropsite/issues"

[project.scripts]
dropsite = "dropsite.cli:main"

[tool.setuptools.packages.find]
include = ["dropsite*"]
